2007-11-06  Marcus Meissner  <marcus@jet.franken.de>

	* usb.c: Bumped timeout to 175.

2007-09-02  Marcus Meissner  <marcus@jet.franken.de>

	* canon.c: Handle IXUS 30 also in ptp driver.

2007-06-03  Paul Walmsley  <paul@booyaka.com>

	* usb.c: remove one last CANON_EXPERIMENTAL_SECONDARY_IMAGE ifdef

2007-06-02  Paul Walmsley  <paul@booyaka.com>

	* usb.c: replace gp_port_usb_check_int_fast() calls with
	timeout save/change/restore and gp_port_usb_check_int()

2007-05-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, canon.c, canon.h,Makefile-files:
	  Removed CANON_EXPERIMENTAL_20D define, now default included.
	  Removed CANON_EXPERIMENTAL_SECONDARY_IMAGE and CANON_EXPERIMENTAL_SET_RELEASE_PARAMS
	  ifdefs, now also default included.

2007-05-25  Paul Walmsley <paul@booyaka.com>

	* usb.c: fix canon_usb_get_body_id() and caller to handle body IDs
	  > INT32_MAX (as seen in some recent Canon EOS 5D bodies)

	* canon.h: add body_id field to the CameraPrivateLibrary structure

2007-05-21  Marcus Meissner  <marcus@jet.franken.de>

	* canon.c: Handle A70 and A80 in ptp2 driver, since this one
	  has better capture handling.

	* Makefile-files: Enable -DCANON_EXPERIMENTAL_SET_RELEASE_PARAMS
	  by default.

2007-03-13  Marcus Meissner  <marcus@jet.franken.de>

	* canon.c: Handle A95 and S50 in ptp2 driver.
	  http://sourceforge.net/tracker/index.php?func=detail&aid=1629132&group_id=8874&atid=108874

2007-01-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Return storage information programmatically.

2006-11-13  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Readded to Optura 20 (alternate id),
	  confirmed by reporter.

2006-06-24  David Selmeczi <seldavid@gmail.com>

	* library.c,canon.c: Added more 350D parameters.

2006-06-20  Marcus Meissner  <marcus@jet.franken.de>
	    Karl Tomlinson  <ktomlinson@users.sf.net>

	* library.c: Keep list_all_files setting permanent.

	* library.c: Also delete thumbnails (but only if